--- a/Garments.html
+++ b/Garments.html
@@ -13,10 +13,10 @@
     <link rel="shortcut icon" href="img/favicon-1.jpeg">
 </head>
 
-<body>
+<body class="container">
 
 
-    <section>
+    <section class="form">
         <div class="header">
             <h1 id="go-to-main" class="heading">MaNgo
                 Marketplace
@@ -65,7 +65,58 @@
         </div>
         <!-- <h1 class="heading">Garments Produncts Only
         </h1> -->
+<!-- Sidebar -->
+<nav class="sidebar">
+    <ul class="side-nav">
+        <li class="side-nav__item side-nav__item--active">
+            <a href="#login" class="side-nav__link">
+                <svg class="side-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-user"></use>
+                </svg>
+                <span>Login here</span>
+            </a>
+        </li>
+        <li class="side-nav__item">
+            <a href="/Registration.html" class="side-nav__link">
+                <svg class="side-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-registration"></use>
+                </svg>
+                <span>Registration</span>
+            </a>
+        </li>
+        <li class="side-nav__item">
+            <a href="/Product.html" class="side-nav__link">
+                <svg class="side-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-product"></use>
+                </svg>
+                <span>Product Page</span>
+            </a>
+        </li>
+        <li class="side-nav__item">
+            <a href="#contact" class="side-nav__link">
+                <svg class="side-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-contact"></use>
+                </svg>
+                <span>Contact Details</span>
+            </a>
+        </li>
+        <li class="side-nav__item">
+            <a href="/index.html" class="side-nav__link">
+                <svg class="side-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-home"></use>
+                </svg>
+                <span>Home Page</span>
+            </a>
+        </li>
 
+    </ul>
+
+    <!--  <div class="l">
+        <div class="l-copyright  ">
+            .Copyright &copy; 2023 by <a href="#" class="l__link">Ahmad</a> All Rights are reserverd.
+        </div>
+    </div> -->
+</nav>
         <div>
             <h1 class="page page__1">All Garments Brand Products Available here</h1>
         </div>
@@ -267,14 +318,14 @@
                         </a>
                     </li>
 
-                    <li>
+                    <!-- <li>
                         <a href="/index.html" class=" btn btn__icon  btn--login">Back tu Home Page
                             <svg class="  side-nav__icon ">
                                 <use xlink:href="img/sprite.svg#icon-home"></use>
                             </svg>
                             &rarr;
                         </a>
-                    </li>
+                    </li> -->
                 </div>
 
 
