--- a/Registration.html
+++ b/Registration.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="img/favicon-1.jpeg">
 </head>
 
-<body>
+<body class="container" >
 
     <div >
         <div class="header">
