--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 </head>
 
-<body>
-    <div>
-        <!-- class="container " -->
+<body class="container">
+    <div >
+        
         <div class="header">
             <h1 id="go-to-main" class="heading">MaNgo
                 Marketplace
