--- a/Contact.html
+++ b/Contact.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div >
         <div class="popup" >
             <div class="popup__content">
 
